k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iems-service
  namespace: default
spec:
  selector:
    app: iems-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
